frontend/test/should_fail/basic_100.grg
using attrib_model_001;

rule r {
	x: NBOOL;

	modify {
		eval {
			x.a = a;
		}
	}
}

